--- a/optimization/最优化笔记.md
+++ b/optimization/最优化笔记.md
@@ -239,6 +239,34 @@ $$
 
 ### 3.3 随机梯度下降法
 
+```python
+# 随机梯度下降
+def gd(x_start, step, g):   # gd代表了Gradient Descent
+    x = x_start
+    for i in range(20):
+        grad = g(x)
+        x -= grad * step
+        print '[ Epoch {0} ] grad = {1}, x = {2}'.format(i, grad, x)
+        if abs(grad) < 1e-6:
+            break;
+    return x
+def f(x):
+    return x * x - 2 * x + 1
+
+def g(x):
+    return 2 * x - 2
+import numpy as np
+import matplotlib.pyplot as plt
+x = np.linspace(-5,7,100)
+y = f(x)
+plt.plot(x, y)
+gd(5,0.1,g)
+```
+
+
+
+
+
 #### 3.3.1 动量
 
 **Momentum**改进自SGD算法，让每一次的参数更新方向不仅仅取决于当前位置的梯度，还受到上一次参数更新方向的影响：
@@ -246,6 +274,34 @@ $$
 d_{i}=\beta d_{i-1}+g(\theta_{i-1})
 $$
 $\theta_{i}=\theta_{i-1}+\alpha d_{i}$其中，$d_{i}$和$d_{i-1}$ 分别是当前和上次更新的方向，$g(\theta)$表示目标函数在$\theta$处的梯度，超参数$\beta$是对上一次更新方向的衰减权重，在所以在$[0-1]$,$\alpha$是学习率。总的来说，总的更新包括上次的更新量和当前的更新量。所以Momentum的想法很简单，就是多更新一部分上一次迭代的更新量，来平滑这一次迭代的梯度。从物理的角度上解释，就像是一个小球滚落的时候会受到自身历史动量的影响，所以才叫动量（Momentum）算法。这样做直接的效果就是使得梯度下降的的时候转弯掉头的幅度不那么大了，于是就能够更加平稳、快速地冲向局部最小点。
+
+```python
+def momentum(x_start, step, g, discount = 0.7):   
+    x = np.array(x_start, dtype='float64')
+    pre_grad = np.zeros_like(x)
+    for i in range(50):
+        grad = g(x)
+        pre_grad = pre_grad * discount + grad * step
+        x -= pre_grad
+        
+        print '[ Epoch {0} ] grad = {1}, x = {2}'.format(i, grad, x)
+        if abs(sum(grad)) < 1e-6:
+            break;
+    return x
+def f(x):
+    return x[0] * x[0] + 50 * x[1] * x[1]
+def g(x):
+    return np.array([2 * x[0], 100 * x[1]])
+xi = np.linspace(-200,200,1000)
+yi = np.linspace(-100,100,1000)
+X,Y = np.meshgrid(xi, yi)
+Z = X * X + 50 * Y * Y
+gd([150,75], 0.016, g)
+
+```
+
+- [路遥知马力——Momentum](https://zhuanlan.zhihu.com/p/21486826)
+- [优化 code](https://github.com/hsmyy/zhihuzhuanlan)
 
 #### 3.3.2 Nesterov梯度加速法
 
@@ -259,7 +315,28 @@ $\theta_{i}=\theta_{i-1}+\alpha d_{i}$
 
 NAG本质上是多考虑了目标函数**二阶导信息**！其实所谓“往前看”的说法，在牛顿法这样的二阶方法中也是经常提到的，比喻起来是说“往前看”，数学本质上则是利用了目标函数的二阶导信息。
 
+```python
+def nesterov(x_start, step, g, discount = 0.7):   
+    x = np.array(x_start, dtype='float64')
+    pre_grad = np.zeros_like(x)
+    for i in range(50):
+        x_future = x - step * discount * pre_grad
+        grad = g(x_future)
+        pre_grad = pre_grad * 0.7 + grad 
+        x -= pre_grad * step
+        
+        print '[ Epoch {0} ] grad = {1}, x = {2}'.format(i, grad, x)
+        if abs(sum(grad)) < 1e-6:
+            break;
+    return x
+nesterov([150,75], 0.012, g)
+```
+
 #### 3.3.3 Adagrad方法
+
+
+
+- [一个框架看懂优化算法之异同 SGD/AdaGrad/Adam](https://zhuanlan.zhihu.com/p/32230623)
 
 #### 3.3.4 AdaDelta方法
 
