svm kernel function

--- a/optimization/最优化笔记.md
+++ b/optimization/最优化笔记.md
@@ -6,27 +6,27 @@
 
 第一种最优化问题表示形式为
 
-![image-20200323141141765](D:\learn\笔记\最优化笔记.assets\image-20200323141141765.png)
+![image-20200323141141765](最优化笔记.assets\image-20200323141141765.png)
 
 第二种最优化问题表示形式为
 
-![image-20200323141211313](D:\learn\笔记\最优化笔记.assets\image-20200323141211313.png)
+![image-20200323141211313](最优化笔记.assets\image-20200323141211313.png)
 
 第三种最优化问题表示形式为
 
-![image-20200323141249298](D:\learn\笔记\最优化笔记.assets\image-20200323141249298.png)
+![image-20200323141249298](最优化笔记.assets\image-20200323141249298.png)
 
 其中
 
-![image-20200323141302693](D:\learn\笔记\最优化笔记.assets\image-20200323141302693.png)
+![image-20200323141302693](最优化笔记.assets\image-20200323141302693.png)
 
 满足所有约束的点称为**容许点或可行点**．容许点的集合称为容许集或可行域．可用表示
 
-![image-20200323141351661](D:\learn\笔记\最优化笔记.assets\image-20200323141351661.png)
+![image-20200323141351661](最优化笔记.assets\image-20200323141351661.png)
 
 一般地，对于最优化问题的求解，是指在可行域内找一点，使得目标函数在该点取得极小值，即
 
-![image-20200323141638001](D:\learn\笔记\最优化笔记.assets\image-20200323141638001.png)
+![image-20200323141638001](最优化笔记.assets\image-20200323141638001.png)
 
 这样的称为问题的最优点，也称极小点，而相应的目标函数值 称为最优值；　　　
 
@@ -36,7 +36,7 @@
 
 **二维最优化问题的图解法**
 
-![image-20200323141829498](D:\learn\笔记\最优化笔记.assets\image-20200323141829498.png)
+![image-20200323141829498](最优化笔记.assets\image-20200323141829498.png)
 
 约束集合
 
@@ -45,7 +45,7 @@
 
 
 
-![image-20200323141905782](D:\learn\笔记\最优化笔记.assets\image-20200323141905782.png)
+![image-20200323141905782](最优化笔记.assets\image-20200323141905782.png)
 
 
 
@@ -53,17 +53,17 @@
 
 在坐标平面上画出约束集合
 
-![image-20200323142330782](D:\learn\笔记\最优化笔记.assets\image-20200323142330782.png)
+![image-20200323142330782](最优化笔记.assets\image-20200323142330782.png)
 
 满足的区域为以原点为圆心，半径为1的圆；满足的区域为第一象限的扇形（如图所示）
 
-![image-20200323142424542](D:\learn\笔记\最优化笔记.assets\image-20200323142424542.png)
+![image-20200323142424542](最优化笔记.assets\image-20200323142424542.png)
 
 ### 1.1等高线
 
 ​      我们知道在三维空间中$t=f(x_{1},x_{2})$表示一张曲面 ${t=c}$．其中 $c$ 为常数）在三维空间中表示平行于 $x_{1},x_{2}$平面的一个平面，这个平面上任何一点的高度都等于常数 （如图）．
 
-![image-20200323144049463](D:\learn\笔记\最优化笔记.assets\image-20200323144049463.png)
+![image-20200323144049463](最优化笔记.assets\image-20200323144049463.png)
 
 在三维空间中曲面$t=f(x_{1},x_{2})$与平面  $t=c$  有一条交线  ．交线在平面上的投影曲线是  $L$，可见曲线上的点到平面的高度都等于常数C，也即曲线上的的函数值都具有相同的值．
 
@@ -75,13 +75,13 @@
 
 在坐标平面  $f(x_{1},x_{2})=x_{1}^2+x_{2}^2$上画出目标函数的等高线．
 
-![image-20200323144506622](D:\learn\笔记\最优化笔记.assets\image-20200323144506622.png)
+![image-20200323144506622](最优化笔记.assets\image-20200323144506622.png)
 
 **Example 2**
 
 用图解法求解二维最优化问题
 
-![image-20200323145119866](D:\learn\笔记\最优化笔记.assets\image-20200323145119866.png)
+![image-20200323145119866](最优化笔记.assets\image-20200323145119866.png)
 
 如图，目标函数的等高线是以$[-2,-2]^T$为圆心的同心圆，并且这族同心圆的外圈比内圈的目标函数值大．因此，该问题为在约束集中找一点,使其落在半径最小的那个同心圆上。问题的最优解为：$X^{*}=[x_{1},x_{2}]^T=[0.0^T]$
 
@@ -102,11 +102,11 @@ $$
 
 如果是求一个约束的极小点，则每一次迭代的新点都应该在约束可行域内，即
 
-![image-20200323153233030](D:\learn\笔记\最优化笔记.assets\image-20200323153233030.png)
+![image-20200323153233030](最优化笔记.assets\image-20200323153233030.png)
 
 下图为迭代过程
 
-![image-20200323153239754](D:\learn\笔记\最优化笔记.assets\image-20200323153239754.png)
+![image-20200323153239754](最优化笔记.assets\image-20200323153239754.png)
 
 ### 1.3 计算终止准则
 
@@ -118,11 +118,11 @@ $$
 
 - 函数下降量准则
 
-相邻两迭代点的函数值下降量已达到充分小,当$|f(X_{k+1})|\leq1$时，可用函数绝对下降量准则![image-20200323163356880](D:\learn\笔记\最优化笔记.assets\image-20200323163356880.png)
+相邻两迭代点的函数值下降量已达到充分小,当$|f(X_{k+1})|\leq1$时，可用函数绝对下降量准则![image-20200323163356880](最优化笔记.assets\image-20200323163356880.png)
 
 - 梯度准则
 
-目标函数在迭代点的梯度已达到充分小，即![image-20200323163156753](D:\learn\笔记\最优化笔记.assets\image-20200323163156753.png)这一准则对于定义域上的凸函数是完全正确的．若是非凸函数，有可能导致误把驻点作为最优点。对于约束优化问题，不同的优化方法有各自的终止准则．
+目标函数在迭代点的梯度已达到充分小，即![image-20200323163156753](最优化笔记.assets\image-20200323163156753.png)这一准则对于定义域上的凸函数是完全正确的．若是非凸函数，有可能导致误把驻点作为最优点。对于约束优化问题，不同的优化方法有各自的终止准则．
 
 综上所述，优化算法的基本迭代过程如下：
 
@@ -155,7 +155,7 @@ $$
 
 对无约束最优化问题
 
-![image-20200323173228273](D:\learn\笔记\最优化笔记.assets\image-20200323173228273.png)
+![image-20200323173228273](最优化笔记.assets\image-20200323173228273.png)
 
 当已知迭代点 $X_{k} $和下降方向$P_{k}$  时，要确定适当的步长  $t_{k}$ 使 $f(X_{k+1}=f(X_{k}+t_{k}P_{k}))$比$f(X_{k})$ 有所下降，即相当于关于t的函数。$\delta(t)=f(X_{k}+tP_{k})$ 要在区间$[0,+\infty]$上选取$t=t_{k}$使$f(X_{k+1})<f(X_{k})$
 
@@ -169,7 +169,7 @@ $$
 
 在目标函数$f(X)$已确定的条件下等价于：
 
-![image-20200323174430593](D:\learn\笔记\最优化笔记.assets\image-20200323174430593.png)
+![image-20200323174430593](最优化笔记.assets\image-20200323174430593.png)
 
 下面进一步解释迭代点$X_{k+1}=X_{k}+t_{k}P_{k}$的空间位置，容易证明，若从$X_{k}$出发，沿$P_{k}$方向进步一维搜索极小点
 
@@ -191,7 +191,7 @@ $$
 
 从某一点 $X_{k}$出发沿方向 $X_{k}$对目标函数 $X_{k}$作直线搜索,所得到的极小点为$X_{k}$  式（2.1）指出，梯度 $\nabla f(X_{k+1})$ 必与搜索方向 $P_{k}$正交.又因为  $\nabla f(X_{k+1})$ 与目标函数过点 $X_{k+1}$ 的等值面   $f(X)=f(X_{k+1})$  正交，所以进一步看到，搜索方向$P_{k}$  与这个等值面在点  $X_{k+1}$处相切（如图所示）． 
 
-![image-20200323180540037](D:\learn\笔记\最优化笔记.assets\image-20200323180540037.png)
+![image-20200323180540037](最优化笔记.assets\image-20200323180540037.png)
 
 
 
@@ -300,6 +300,10 @@ gd([150,75], 0.016, g)
 
 ```
 
+![image-20200325122351817](最优化笔记.assets/image-20200325122351817.png)
+
+
+
 - [路遥知马力——Momentum](https://zhuanlan.zhihu.com/p/21486826)
 - [优化 code](https://github.com/hsmyy/zhihuzhuanlan)
 
@@ -334,17 +338,64 @@ nesterov([150,75], 0.012, g)
 
 #### 3.3.3 Adagrad方法
 
+![img](https://pic3.zhimg.com/80/v2-3548fbec8da27d3957d024d556cef4a6_1440w.jpg)
 
+**简单来讲，设置全局学习率之后，每次通过，全局学习率逐参数的除以历史梯度平方和的平方根，使得每个参数的学习率不同**
+
+**起到的效果是在参数空间更为平缓的方向，会取得更大的进步（因为平缓，所以历史梯度平方和较小，对应学习下降的幅度较小），并且能够使得陡峭的方向变得平缓，从而加快训练速度。**
+
+**二阶动量的出现，才意味着“自适应学习率”优化算法时代的到来。SGD及其变种以同样的学习率更新每个参数**，但深度神经网络往往包含大量的参数，这些参数并不是总会用得到（想想大规模的embedding）。**对于经常更新的参数，我们已经积累了大量关于它的知识，不希望被单个样本影响太大，希望学习速率慢一些**；对于偶尔更新的参数，我们了解的信息太少，希望能从每个偶然出现的样本身上多学一些，即学习速率大一些
+
+![image-20200325123754557](最优化笔记.assets/image-20200325123754557.png)
+
+- [动手机器学习](https://zh.d2l.ai/chapter_optimization/momentum.html)
 
 - [一个框架看懂优化算法之异同 SGD/AdaGrad/Adam](https://zhuanlan.zhihu.com/p/32230623)
+
+### 3.3.4 RMSProp
+
+因为调整学习率时分母上的变量**s**tst一直在累加按元素平方的小批量随机梯度，所以目标函数自变量每个元素的学习率在迭代过程中一直在降低（或不变）。因此，当学习率在迭代早期降得较快且当前解依然不佳时，AdaGrad算法在迭代后期由于学习率过小，可能较难找到一个有用的解。为了解决这一问题，RMSProp算法对AdaGrad算法做了一点小小的修改。该算法源自Coursera上的一门课，即“机器学习的神经网络” [1]。
+
+![image-20200325123933133](最优化笔记.assets/image-20200325123933133.png)
 
 #### 3.3.4 AdaDelta方法
 
 #### 3.3.5 Adam算法
 
-## 4. reference
+
+
+## 4. 正则化
+
+通过改变模型的拟合能力来避免过拟合并不是一件容易的事情，更常用的办法是使用规范化对模型的参数进行一定的约束。下面来考虑一个非常简单的例子，求下面方程的解：
+$$
+2x+y+2=0
+$$
+
+
+![这里写图片描述](https://img-blog.csdn.net/20180728123542396?watermark/2/text/aHR0cHM6Ly9ibG9nLmNzZG4ubmV0L3FxXzM2NDI3NzMy/font/5a6L5L2T/fontsize/400/fill/I0JBQkFCMA==/dissolve/70)
+
+这是一个二元一次方程，有无数个解，都在下图1a所示的这条直线上。
+
+这是一个典型的病态（ill-posed）方程，有无数个解可以满足方程，可以通过$x$和$y$代入等式左边求出0，但是通过等式来推导xx和yy的值却是不可行的。病态方程除了有不可逆的性质，在数值计算上也不受欢迎，比如$x=10^9 y=2*10^9+2$,那么如果x和y的系数发生很小的变化，则这个变化会被放大很多到等式的右边，在数值计算中，这常常是不稳定的
+
+针对病态方程，一个常见的办法是加入一个约束项，缩小x和y的取值范围,比如令$x^2+y^2=0.8$,如图1b所示
+
+则相当于约束x和y在半径为2√5圆上，于是相切点（-0.8,0.4）成了一个稳定的解。此外还可以令约束为|x|+|y|=1,则交点也只有一个，就是（-1,0），也是一个稳定的唯一解。
+
+### 4.1 L1 正则化
+
+
+
+### 4.2 L2 正则化
+
+
+
+
+
+## 5. reference
 
 - [理解牛顿法](https://zhuanlan.zhihu.com/p/37588590)
+- [机器学习理论篇1：机器学习的数学基础](https://zhuanlan.zhihu.com/p/25197792)
 
 
 
