--- a/optimization/最优化笔记.md
+++ b/optimization/最优化笔记.md
@@ -376,7 +376,7 @@ $$
 
 这是一个二元一次方程，有无数个解，都在下图1a所示的这条直线上。
 
-这是一个典型的病态（ill-posed）方程，有无数个解可以满足方程，可以通过$x$和$y$代入等式左边求出0，但是通过等式来推导xx和yy的值却是不可行的。病态方程除了有不可逆的性质，在数值计算上也不受欢迎，比如$x=10^9 y=2*10^9+2$,那么如果x和y的系数发生很小的变化，则这个变化会被放大很多到等式的右边，在数值计算中，这常常是不稳定的
+这是一个典型的病态（ill-posed）方程，有无数个解可以满足方程，可以通过$x$和$y$代入等式左边求出0，但是通过等式来推导x和y的值却是不可行的。病态方程除了有不可逆的性质，在数值计算上也不受欢迎，比如$x=10^9 y=2*10^9+2$,那么如果x和y的系数发生很小的变化，则这个变化会被放大很多到等式的右边，在数值计算中，这常常是不稳定的
 
 针对病态方程，一个常见的办法是加入一个约束项，缩小x和y的取值范围,比如令$x^2+y^2=0.8$,如图1b所示
 
