--- a/ml/多任务.md
+++ b/ml/多任务.md
@@ -38,3 +38,4 @@
 - [概念学习和归纳偏置](https://blog.51cto.com/underthehood/590838)
 - [多任务学习综述-A Survey on Multi-Task Learning](https://zhuanlan.zhihu.com/p/67524006)
 - [MMOE 简介](https://zhuanlan.zhihu.com/p/55752344?edition=yidianzixun&utm_source=yidianzixun&yidian_docid=0LC8kTgk)
+- [git code mmoe](https://github.com/drawbridge/keras-mmoe)
