--- a/ml/多任务.md
+++ b/ml/多任务.md
@@ -31,6 +31,10 @@
 
 5. 基于分解的MTL
 
+
+
+
+
 #### Reference
 
 - [Deep Multi-Task Learning – 3 Lessons Learned](https://engineering.taboola.com/deep-multi-task-learning-3-lessons-learned/)
@@ -39,3 +43,4 @@
 - [多任务学习综述-A Survey on Multi-Task Learning](https://zhuanlan.zhihu.com/p/67524006)
 - [MMOE 简介](https://zhuanlan.zhihu.com/p/55752344?edition=yidianzixun&utm_source=yidianzixun&yidian_docid=0LC8kTgk)
 - [git code mmoe](https://github.com/drawbridge/keras-mmoe)
+- [Multi-task Learning(Review)多任务学习概述](https://zhuanlan.zhihu.com/p/59413549)
